--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,84 @@ pytest
 flake8
 ipython
 #### Add text to install the python-package here
+anyio==4.9.0
+appnope==0.1.4
+apsw==3.50.2.0
+apswutils==0.1.0
+asttokens==3.0.0
+beautifulsoup4==4.13.4
+certifi==2025.7.14
+click==8.2.1
+comm==0.2.2
+contourpy==1.3.2
+cycler==0.12.1
+debugpy==1.8.15
+decorator==5.2.1
+employee_events @ file:///Users/potepongchaikul/Desktop/Pote%20stuff/Learning/Academic/Online%20courses/Udac%20SoftEng/4b%20-%20Project%20Data%20Science%20Dashboard/Udac-SoftEng-project/python-package/dist/employee_events-0.0.tar.gz#sha256=5b8eebd71b6aef55501323e6444915d32d38c6887a071895059f1dd80ea5df1d
+executing==2.2.0
+fastcore==1.8.5
+fastlite==0.2.1
+flake8==7.3.0
+fonttools==4.59.0
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+idna==3.10
+iniconfig==2.1.0
+ipykernel==6.29.5
+ipython==9.4.0
+ipython_pygments_lexers==1.1.1
+itsdangerous==2.2.0
+jedi==0.19.2
+joblib==1.5.1
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+kiwisolver==1.4.8
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
+mccabe==0.7.0
+nest-asyncio==1.6.0
+numpy==2.1.2
+oauthlib==3.3.1
+packaging==25.0
+pandas==2.2.3
+parso==0.8.4
+pexpect==4.9.0
+pillow==11.3.0
+platformdirs==4.3.8
+pluggy==1.6.0
+prompt_toolkit==3.0.51
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pycodestyle==2.14.0
+pyflakes==3.4.0
+Pygments==2.19.2
+pyparsing==3.2.3
+pytest==8.4.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+python-fasthtml==0.12.21
+python-multipart==0.0.20
+pytz==2025.2
+PyYAML==6.0.2
+pyzmq==27.0.0
+scikit-learn==1.5.2
+scipy==1.14.1
+setuptools==80.9.0
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.7
+stack-data==0.6.3
+starlette==0.47.1
+threadpoolctl==3.6.0
+tornado==6.5.1
+traitlets==5.14.3
+typing_extensions==4.14.1
+tzdata==2025.2
+uvicorn==0.35.0
+uvloop==0.21.0
+watchfiles==1.1.0
+wcwidth==0.2.13
+websockets==15.0.1
